[gd_scene load_steps=6 format=2]

[ext_resource path="res://sfx/menu_confirm.wav" type="AudioStream" id=1]
[ext_resource path="res://sfx/page_back.wav" type="AudioStream" id=2]
[ext_resource path="res://sfx/menu_back.wav" type="AudioStream" id=3]
[ext_resource path="res://sfx/page_confirm.wav" type="AudioStream" id=4]
[ext_resource path="res://singleton/sound_master.gd" type="Script" id=5]

[node name="sound_master" type="Node"]
script = ExtResource( 5 )

[node name="menu_confirm_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 1 )

[node name="menu_back_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )

[node name="page_confirm_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )

[node name="page_back_sfx" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 2 )
